--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dimyelvgp",
+    "ApiKey": "579811279436966",
+    "ApiSecret": "AOZWw3KC4QHyG4S6ADX5Pt5sBNQ"
+  }
 }
